# schedule_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  commands.py  converter.py  database_models.py  db_middleware.py  dialog_menu.py  docker-compose.yaml  entrypoint.sh  exceptions.py  fluentogram_utils.py  i18n_middleware.py  main.py  pyproject.toml  renderer.py  requirements-dev.txt  requirements.txt  sender.py  upload_images.py
alembic/: env.py
alembic/versions/: 0e5ec20fed5b_add_null_user_as_default_settings.py  2eaac5b23896_add_display_order_as_db_field.py  7e03d8f45d1a_add_cascade_settings.py  84198ee616fb_change_max_length_for_file_id.py  91fead7b82ab_add_field_for_bans.py  9431e8cc4de8_create_tables.py  bcebcdbc8804_save_templates_as_text_in_db.py  caf47edf5194_rename_tables_to_avoid_extra_escaping.py  dc541868ecb0_create_table_for_user_settings.py  e30f9ff82539_reinit_tables.py
bot_registry/: __init__.py  image_assets.py  nats_mixin.py  templates.py  texts.py  users.py
data/: .gitignore
data/nats/: initial_setup.py  server.conf
dialogs/: __init__.py  administration.py  backgrounds.py  main_menu.py  schedule_creation.py  schedule_wizard.py  states.py  templates.py  upload_background.py  user_selection.py  utils.py
elements_registry/: __init__.py
locales/en/LC_MESSAGES/: commands.ftl  dialogs.ftl  weekdays.ftl  (+1 more)
middlewares/: blacklist.py  i18n.py  registry.py
readme_files/: my_template_smol.json
services/: converter.py  renderer.py  sender.py
services/converter/: __init__.py  __main__.py
services/renderer/: README.md  __init__.py  __main__.py  templates.py  weekdays.py
services/sender/: README.md  __init__.py  __main__.py
src/app/: i18n.py
src/bot_registry/: __init__.py  database_mixin.py  database_models.py  image_assets.py  image_elements.py  templates.py  texts.py  users.py
src/core/: database_models.py  entities.py  exceptions.py  fluentogram_utils.py  models.py
src/services/: main.py  upload_images.py
(+54 files in other folders)
